--- a/memo game/src/styles/UserLog.css
+++ b/memo game/src/styles/UserLog.css
@@ -9,13 +9,13 @@ body{
 
 .container{
     display: flex;
-    max-width: 400px;
+    min-width: 400px;
     padding: 20px;
     color: #fff;
     border-radius: 25px;
     background-color: #000c;
     min-height: 200px;
-    margin-top: 50%;
+    margin-top: 40%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -38,4 +38,38 @@ button{
     border: none;
     background-color: #009c;
     color: #fff;
+    margin-top: 10px;
+    transition: transform .2s,box-shadow .2s;
+}
+
+button:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 0 10px #00f;
+}
+
+.cardsContainer{
+    display: flex;
+    min-width:400px ;
+    max-height: 200px;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.cards {
+    width: 130px;
+    height: 200px;
+    color: #fff;
+    background-color: rgb(179, 124, 21);
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    transition: transform 0.2s,box-shadow .2s;
+}
+
+.cards:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #ccc;
 }
