--- a/memo game/src/styles/index.css
+++ b/memo game/src/styles/index.css
@@ -1,5 +1,5 @@
 body{
     background: url(../images/imagen-fondo.png) no-repeat center center fixed;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
 }
